--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">android-study</string>
+    <string name="question_text">Canberra is the capital of Australia.</string>
+    <string name="ture_button">确定</string>
+    <string name="false_button">取消</string>
 </resources>
