--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,3 @@
 <resources>
-    <string name="app_name">阐扬信息</string>
-    <string name="tab_location">位置</string>
-    <string name="tab_find">发现</string>
-    <string name="tab_favorite">爱好</string>
-    <string name="tab_book">图书</string>
+    <string name="app_name">android-study</string>
 </resources>
